Fixed missing checkboxes on iOS

--- a/styles/page-customers.css
+++ b/styles/page-customers.css
@@ -31,6 +31,10 @@
     width: 100%;
     height: 100%;
     margin-left: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    position: relative;
+    display: inline-block;
 }
 
 .filter-text {
